--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <main>
-      <div class="contact-page">
+      <main class="contact-page">
         <section class="contact-info">
         <div class="info-text">
         <p><strong>Des questions ? N’hésitez pas !</strong></p>
@@ -52,7 +52,7 @@
     <p>© 2025 Nelumbo Blooms - Grenoble - Site déposé</p>
     <p><a href="#">Conditions générales de vente</a> | <a href="#">Mentions légales</a> | <a href="#">Plan du site</a></p>
   </footer>
-      </div>
+      </main class>
     </main>
 </body>
 </html>
