update contact button+logo links+contact_page

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
             </ul>
         </nav>
         <div class="social-content">
-            <img src="https://i.postimg.cc/zXbfxcTM/fb-logo.png" class="fb-logo" alt="Facebook Logo">
-            <img src="https://i.postimg.cc/02TyF0fN/insta-logo.png" class="i-logo" alt="Instagram Logo">
+            <a href="https://www.facebook.com" target="_blank"><img src="https://i.postimg.cc/zXbfxcTM/fb-logo.png" class="fb-logo" alt="Facebook Logo"></a>
+            <a href="https://instagram.com" target="_blank"><img src="https://i.postimg.cc/02TyF0fN/insta-logo.png" class="i-logo" alt="Instagram Logo"></a>
         </div>
     </header>
     <main>
