--- a/weddings.html
+++ b/weddings.html
@@ -19,8 +19,8 @@
             </ul>
         </nav>
         <div class="social-content">
-            <img src="https://i.postimg.cc/zXbfxcTM/fb-logo.png" class="fb-logo" alt="Facebook Logo">
-            <img src="https://i.postimg.cc/02TyF0fN/insta-logo.png" class="i-logo" alt="Instagram Logo">
+            <a href="https://www.facebook.com" target="_blank"><img src="https://i.postimg.cc/zXbfxcTM/fb-logo.png" class="fb-logo" alt="Facebook Logo"></a>
+            <a href="https://instagram.com" target="_blank"><img src="https://i.postimg.cc/02TyF0fN/insta-logo.png" class="i-logo" alt="Instagram Logo"></a>
         </div>
     </header>
     <main>
@@ -32,7 +32,7 @@
                 Chaque formule inclut une sélection de décorations florales, ajustable selon le nombre de tables ou la taille de l’événement. Les contenants et accessoires sont fournis en location, sans frais supplémentaires.<br>
                 Il ne reste plus qu’à définir ensemble vos couleurs, vos fleurs de cœur, et les formes qui viendront donner vie à votre scénographie florale. Et pour que vous profitiez pleinement de votre journée, je peux également prendre en charge la livraison et l’installation.
             </p>
-            <button class="contact-button">Contactez-moi!</button>
+            <a href="contact.html" button class="contact-button">Contactez-moi!</a>
         </div>
     </main>
 </body>
