--- a/compositions.html
+++ b/compositions.html
@@ -27,10 +27,10 @@
         <div class="carousel-container">
             <button class="nav-arrow left-arrow">&lt;</button> <div class="compositions-grid-wrapper">
                 <div class="compositions-grid">
-                    <img src="https://via.placeholder.com/300x200?text=Comp1" alt="Composition 1">
-                    <img src="https://via.placeholder.com/300x200?text=Comp2" alt="Composition 2">
-                    <img src="https://via.placeholder.com/300x200?text=Comp3" alt="Composition 3">
-                    <img src="https://via.placeholder.com/300x200?text=Comp4" alt="Composition 4">
+                    <img src="https://i.postimg.cc/44LZJ241/Maquette-4.png" alt="Composition 1">
+                    <img src="https://i.postimg.cc/X7rWXKp6/Maquette-5.png" alt="Composition 2">
+                    <img src="https://i.postimg.cc/2Svf7zQH/Maquette-6.png" alt="Composition 3">
+                    <img src="https://i.postimg.cc/8PxSvF6J/Maquette-7.png" alt="Composition 4">
                     <img src="https://via.placeholder.com/300x200?text=Comp5" alt="Composition 5">
                     <img src="https://via.placeholder.com/300x200?text=Comp6" alt="Composition 6">
                 </div>
