--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Nelumbo Blooms</title>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
 </head>
+
 <body>
     <header>
-        <div class="logo-content"><img src="https://i.postimg.cc/ht0hhK08/logo.png" class="nelumbo" alt="Nelumbo Blooms Logo"></div>
+        <div class="logo-content">
+            <img src="https://i.postimg.cc/ht0hhK08/logo.png" class="nelumbo" alt="Nelumbo Blooms Logo" />
+        </div>
         <nav>
             <ul>
                 <li><a href="/index.html" class="active">Accueil</a></li>
@@ -20,16 +24,20 @@
             </ul>
         </nav>
         <div class="social-content">
-            <a href="https://www.facebook.com" target="_blank"><img src="https://i.postimg.cc/zXbfxcTM/fb-logo.png" class="fb-logo" alt="Facebook Logo"></a>
-            <a href="https://instagram.com" target="_blank"><img src="https://i.postimg.cc/02TyF0fN/insta-logo.png" class="i-logo" alt="Instagram Logo"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="https://i.postimg.cc/zXbfxcTM/fb-logo.png"
+                    class="fb-logo" alt="Facebook Logo" /></a>
+            <a href="https://instagram.com" target="_blank"><img src="https://i.postimg.cc/02TyF0fN/insta-logo.png"
+                    class="i-logo" alt="Instagram Logo" /></a>
         </div>
     </header>
     <main>
         <div class="lotus">
-            <div class="accroche">Laissez le lotus révéler la beauté de vos moments précieux</div>
-            <address>13 Rue des Violettes<br>Tel: 06 74 xx xx xx</address>
-            <img src="https://i.postimg.cc/zfCMNYCw/Design-sans-titre-2.png" class="sticker" alt="loto">
+            <div class="accroche">Laissez le lotus révéler la beauté de vos moments précieux
+                <img src="https://i.postimg.cc/zfCMNYCw/Design-sans-titre-2.png" width="200px" class="sticker" alt="loto"/>
+            </div>
         </div>
+        <address>13 Rue des Violettes<br />Tel: 06 74 xx xx xx</address>
     </main>
 </body>
+
 </html>
